@@ -1,18 +1,13 @@
 package net.linkle.valleycraft.item;
 
-import com.google.common.collect.Multimap;
+import java.util.List;
+
 import net.linkle.valleycraft.api.EnchantmentHandler;
 import net.minecraft.enchantment.Enchantment;
 import net.minecraft.enchantment.EnchantmentTarget;
 import net.minecraft.enchantment.Enchantments;
-import net.minecraft.entity.EquipmentSlot;
-import net.minecraft.entity.attribute.EntityAttribute;
-import net.minecraft.entity.attribute.EntityAttributeModifier;
 import net.minecraft.item.HoeItem;
 import net.minecraft.item.ToolMaterial;
-
-import java.util.Collections;
-import java.util.List;
 
 public class ModPrismarineHoeItem extends HoeItem implements EnchantmentHandler {
     public ModPrismarineHoeItem(ToolMaterial material, int attackDamage, float attackSpeed, Settings settings) {
@@ -21,7 +16,7 @@ public class ModPrismarineHoeItem extends HoeItem implements EnchantmentHandler 
 
     @Override
     public List<EnchantmentTarget> getEnchantmentTypes() {
-        return Collections.singletonList(EnchantmentTarget.WEAPON);
+        return List.of(EnchantmentTarget.WEAPON);
     }
     @Override
     public boolean isExplicitlyValid(Enchantment enchantment) {
